# rust_eg_fb_dvi

./: .gitignore  CMakeLists.txt  main.c  readme.md
rust-eg-fb/: Cargo.toml  rebuild.sh  rust-eg-fb.h
rust-eg-fb/src/: draw.rs  lib.rs  screen.rs
